plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.catcher'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'

    //ssh
    implementation 'com.jcraft:jsch:0.1.55'

    //open feign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //kms
    implementation 'com.amazonaws:aws-java-sdk-kms:1.12.429'
    implementation 'org.zalando:spring-cloud-config-aws-kms:5.1.2'
    implementation 'com.amazonaws:aws-java-sdk-kms:1.12.429'
    implementation 'com.amazonaws:jmespath-java:1.12.468'

    implementation 'org.json:json:20230227'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
    testImplementation 'org.springframework.security:spring-security-test:6.0.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'

    // webclinet 설정
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //crawling
    implementation 'org.seleniumhq.selenium:selenium-java:4.14.1'
    implementation 'com.opencsv:opencsv:5.7.1'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.3"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
